--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,6 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+    <jsp-config>
+        <jsp-property-group>
+            <url-pattern>*.jsp</url-pattern>
+            <include-prelude>/WEB-INF/taglibs.jsp</include-prelude>
+        </jsp-property-group>
+    </jsp-config>
 
     <servlet>
         <servlet-name>Accueil</servlet-name>
@@ -11,5 +17,14 @@
     <servlet-mapping>
         <servlet-name>Accueil</servlet-name>
         <url-pattern>/toto</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>GestionTestJDBC</servlet-name>
+        <servlet-class>com.sdzee.servlets.GestionTestJDBC</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>GestionTestJDBC</servlet-name>
+        <url-pattern>/testjdbc</url-pattern>
     </servlet-mapping>
 </web-app>
